2001-01-20  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/NSBezierPath.m 
	Corrected some bugs. Opimized the concret subclass to use a
	GSIArray.
	
Sun Jan 21 14:10:52 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSClipView.m ([-setBoundsOrigin:]): Rewritten/fixed
	scrolling so that it only copies from visible bits.

Sat Jan 20 23:38:03 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	Patches by Alexander Malmberg <malmberg@malmberg.org>, modified:
	* Source/NSMenu.m ([NSMenuWindowTitleView -titleHeight]): New
	method.  ([NSMenu -initWithTitle:]): Use the new method to compute
	menu title height.  ([NSMenu -sizeToFit]): Idem.
	* Source/NSMenuView.m ([+menuBarHeight]): Compute from the font
	height.  ([-initWithFrame:]): Compute cellSize from the font size.
	
2001-01-20  Fred Kiefer  <FredKiefer@gmx.de>

        * Headers/gnustep/gui/NSBezierPath.h
	Added missing methods and changed the ivars.
	* Source/NSBezierPath.m 
	Almost complete rewrite. The abstract class implements now most of
	the methods leaving only 9 methods to the concrete class. (And
	the hit test should also go into the abstract class) Simplified
	and corrected most methods.
	* Source/NSAffineTransform.m
	[transformBezierPath:] autorelease the returned object.
	
2001-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLayoutManager.m: Reorganize and tidy up glyph code
	in preparation for handling gaps in the glyh stream.

Fri Jan 19 17:22:24 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile: Added RPM_DISABLE_RELOCATABLE and
	PACKAGE_NEEDS_CONFIGURE.
	* gnustep-gui.spec.in, gnustep-gui-debug.spec.in: New files.
	* gnustep-gui.spec: Removed.

Wed Jan 17 19:51:57 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTableHeaderView.m ([-mouseDown:]): Fixed bug in
	resizing (patch by Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
	slightly modified).

Tue Jan 16 12:01:28 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m (_NSAppKitUncaughtExceptionHandler):